--- a/02Wk02/conFusion/index.html
+++ b/02Wk02/conFusion/index.html
@@ -162,23 +162,23 @@
                     <div class="form-group">
                         <label for="num_of_guest" class="col-sm-2 control-label">Number of Guests</label>
                         <div class="col-sm-10">
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+                            <label class="radio-inline">
+                                <input type="radio" id="inlineradio1" value="option1"> 1
                             </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+                            <label class="radio-inline">
+                                <input type="radio" id="inlineradio2" value="option2"> 2
                             </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+                            <label class="radio-inline">
+                                <input type="radio" id="inlineradio3" value="option3"> 3
                             </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox4" value="option1"> 4
+                            <label class="radio-inline">
+                                <input type="radio" id="inlineradio4" value="option4"> 4
                             </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox5" value="option2"> 5
+                            <label class="radio-inline">
+                                <input type="radio" id="inlineradio5" value="option5"> 5
                             </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox6" value="option3"> 6
+                            <label class="radio-inline">
+                                <input type="radio" id="inlineradio6" value="option6"> 6
                             </label>
                         </div>
                     </div>
