--- a/leechowpan/conFusion/index.html
+++ b/leechowpan/conFusion/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ristorante Con Fusion</title>
+    <title>leechowpan.com</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
@@ -28,7 +28,10 @@
                     &nbsp
                 </div>
                 <div class="col-xs-12 col-sm-8">
-                    <form class="form-horizontal" role="search">
+                    <img class="img-responsive center-block" src="img/logo.png" alt="Logo">
+                    <p></p>
+                    <p></p>
+                    <form class="form-horizontal" role="login">
                         <div class="form-group">
                             <input type="text" class="form-control" name="email" placeholder="Email">
                         </div>
@@ -36,7 +39,7 @@
                             <input type="text" class="form-control" name="password" placeholder="Password">
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-default">Sign In</button>
+                            <button type="submit" class="btn btn-default">Sign In</button> &nbsp
                             <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
                             <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
                             <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
@@ -44,17 +47,20 @@
                             <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                             <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                         </div>
-                        <div class="col-xs-12 col-sm-2">
-                            &nbsp
-                        </div>
                     </form>
                 </div>
             </div>
         </div>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
+        <div class="col-xs-12 col-sm-2">
+            &nbsp
+        </div>
+    </div>
+    </div>
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
