--- a/01_webstack/02Wk03/conFusion/index.html
+++ b/01_webstack/02Wk03/conFusion/index.html
@@ -54,22 +54,124 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="password" placeholder="Password">
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"><span style="color:white">  Remember me  </span></label>
-                    </div>
-                    <button type="submit" class="btn btn-default">Sign In</button>
-                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a data-toggle="modal" data-target="#loginModal">
+                            <span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
+    <!-- loginModal  -->
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <!-- Title of modal -->
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login </h4>
+                </div>
+                <!-- Body of modal -->
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="email" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="password" placeholder="Password">
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox">Remember me</label>
+                        </div>
+                        <button type="submit" class="btn btn-info btn-sm">Sign In</button>
+                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- reserveModal  -->
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <!-- Title of modal -->
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Reserve Table </h4>
+                </div>
+                <!-- Body of modal -->
+                <div class="modal-body">
+                    <form id="reserveform" class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="num_of_guest" class="col-sm-2 control-label">Number of Guests</label>
+                            <div class="col-sm-10">
+                                <label class="radio-inline">
+                                    <input type="radio" id="inlineradio1" value="option1"> 1
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" id="inlineradio2" value="option2"> 2
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" id="inlineradio3" value="option3"> 3
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" id="inlineradio4" value="option4"> 4
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" id="inlineradio5" value="option5"> 5
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" id="inlineradio6" value="option6"> 6
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-primary btn-success active">
+                                        <input type="radio" name="options" id="non-smoking" autocomplete="off" checked> Non-Smoking
+                                    </label>
+                                    <label class="btn btn-primary btn-danger">
+                                        <input type="radio" name="options" id="smoking" autocomplete="off"> Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="date_n_time" class="col-sm-2 control-label">Date and Time</label>
+                            <div class="col-sm-5">
+                                <div class="input-group">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <div class="input-group">
+                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                            </div>
+                        </div>
+                        <div class="alert alert-warning alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Warning!</strong> Please <a href="tel:+852 1234 5678">call</a> us to reserve for more than six guests.
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Header -->
     <header class="jumbotron">
         <!-- Main component for a primary marketing message or call to action -->
         <div class="container">
@@ -85,12 +187,65 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a href="#form" class="btn btn-warning btn-block" role="button">Reserve</a>
+                    <a type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reserveModal">Reserve</a>
                 </div>
             </div>
         </div>
     </header>
+    <!-- Body content -->
     <div class="container">
+        <!-- Carousel Section -->
+        <div class="row row-content">
+            <div class="col-xs-12">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img class="img-responsive" src="img/uthappizza.png" alt="Uthappizza">
+                            <div class="carousel-caption">
+                                <h2>Uthappizza  <span class="label label-danger">Hot</span> <span class="badge">$4.99</span></h2>
+                                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="img/buffet.png" alt="buffet">
+                            <div class="carousel-caption">
+                                <h2>Weekend Grand Buffet <span class="label label-danger label-xs">New</span></h2>
+                                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.</p>
+                                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="img/alberto.png" alt="Alberto Somayya">
+                            <div class="carousel-caption">
+                                <h2 class="media-heading">Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.
+                                </p>
+                                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <!-- Content -->
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
@@ -111,6 +266,7 @@
                 </div>
             </div>
         </div>
+        <!-- Content -->
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
@@ -129,6 +285,7 @@
                 </div>
             </div>
         </div>
+        <!-- Content -->
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
@@ -151,65 +308,8 @@
                 </div>
             </div>
         </div>
-        <a name="form"></a>
-        <div class="row row-content">
-            <div class="col-xs-12 col-sm-3">
-                <p style="padding:20px;"></p>
-                <h3 align=center>Reserve a Table</h3>
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                        <label for="num_of_guest" class="col-sm-2 control-label">Number of Guests</label>
-                        <div class="col-sm-10">
-                            <label class="radio-inline">
-                                <input type="radio" id="inlineradio1" value="option1"> 1
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" id="inlineradio2" value="option2"> 2
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" id="inlineradio3" value="option3"> 3
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" id="inlineradio4" value="option4"> 4
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" id="inlineradio5" value="option5"> 5
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" id="inlineradio6" value="option6"> 6
-                            </label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="date_n_time" class="col-sm-2 control-label">Date and Time</label>
-                        <div class="col-sm-5">
-                            <div class="input-group">
-                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></span>
-                            </div>
-                        </div>
-                        <div class="col-sm-5">
-                            <div class="input-group">
-                                <input type="time" class="form-control" id="time" name="time" placeholder="Time">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary">Reserve</button>
-                        </div>
-                    </div>
-                    <div class="alert alert-warning alert-dismissible" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <strong>Warning!</strong> Please <a href="tel:+852 1234 5678">call</a> us to reserve for more than six guests.
-                    </div>
-                </form>
-            </div>
-        </div>
     </div>
+    <!-- Footer -->
     <footer class="row-footer">
         <div class="container">
             <div class="row row-footer">
@@ -258,6 +358,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script>
+    $(document).ready(function() {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+    </script>
 </body>
 
 </html>
